add smooth scroll to comment
when you click on answer app scrolls to this comment.

--- a/frontend/styles/Comment.module.css
+++ b/frontend/styles/Comment.module.css
@@ -9,7 +9,6 @@
 .infoContainer {
   background-color: #aff;
   margin-bottom: 1rem;
-  /* display: flex; */
 }
 
 .infoContainer p {
@@ -46,6 +45,8 @@
 }
 
 .content {
+  width: 100%;
+  background-color: #ffa;
 }
 
 .answerButton {
