--- a/frontend/styles/Comment.module.css
+++ b/frontend/styles/Comment.module.css
@@ -1,9 +1,10 @@
 .container {
   background-color: #eee;
   border: 1px solid black;
-  margin: 10px;
+  margin-bottom: 1rem;
   margin-left: 30px;
-  padding: 10px;
+  padding: 1rem;
+  /* box-shadow: 0px 6px 16px -7px rgba(34, 60, 80, 0.2); */
 }
 
 .infoContainer {
