--- a/frontend/styles/IndexPage.module.css
+++ b/frontend/styles/IndexPage.module.css
@@ -8,6 +8,30 @@
   margin-bottom: 1rem;
 }
 
+.loaderContainer {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  animation-name: spin;
+  animation-duration: 800ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .button {
   display: block;
   margin: auto;
