--- a/frontend/styles/PostPage.module.css
+++ b/frontend/styles/PostPage.module.css
@@ -9,6 +9,30 @@
   padding: 1rem;
 }
 
+.loaderContainer {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  animation-name: spin;
+  animation-duration: 800ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .postContainer h1 {
   margin-bottom: 1rem;
 }
