--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -41,7 +41,7 @@ a {
   --colors-black: #111111;
   --colors-white: #ffffff;
   --colors-greyfg: #fafafa;
-  --colors-lightgray: #eaeaea;
+  --colors-lightgrey: #eaeaea;
   --colors-grey: #666666;
   --colors-accent: #0070f3;
   --colors-accent-hov: #379eff;
@@ -49,10 +49,12 @@ a {
 
   /* padings */
   --pad-btn: 0.8rem 3.5rem;
+  --pad-sm-btn: .25rem .5rem;;
 
   /* shadows */
   --shadow-active: 0 4px 14px 0 rgba(0, 118, 255, 0.39);
-  --shadow-unactive: 0 6px 20px rgba(93, 93, 93, 0.23);
+  --shadow-unactive: 0 3px 10px rgba(93,93,93,.23);
+  --shadow-unactive-hover: 0 6px 20px rgba(93,93,93,.23);
 
   /* radius */
   --radii: 7px;
