--- a/frontend/styles/Comment.module.css
+++ b/frontend/styles/Comment.module.css
@@ -1,28 +1,30 @@
 .container {
-  background-color: #eee;
-  border: 1px solid black;
-  margin-bottom: 1rem;
-  margin-left: 30px;
+  font-family: var(--font);
   padding: 1rem;
-  /* box-shadow: 0px 6px 16px -7px rgba(34, 60, 80, 0.2); */
+  background-color: var(--colors-white);
+  border: 1px solid var(--colors-lightgrey);
+  border-radius: var(--radii);
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+.topContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .infoContainer {
+  font-size: var(--fz-sm);
   margin-bottom: 1rem;
-}
-
-.infoContainer p {
-  margin: auto;
+  color: var(--colors-grey);
 }
 
 .answersContainer {
+  font-size: var(--fz-sm);
+  color: var(--colors-grey);
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
-}
-
-.answersContainer p {
-  margin: 0;
 }
 
 .contentContainer {
@@ -30,37 +32,42 @@
   margin-bottom: 1rem;
 }
 
-.content p {
-  margin: 0;
+.contentContainer h2 {
+  font-size: var(--fz-md1);
+  margin-bottom: 0.5rem;
 }
 
-.content h3 {
-  margin: 0;
+.contentContainer p {
+  font-size: var(--fz-sm);
 }
 
 .image {
-  max-width: 15%;
+  border-radius: var(--radii);
+  max-width: 20%;
   max-height: 200px;
   margin-right: 1rem;
 }
 
-.content {
-  width: 100%;
+.bottomContainer {
+  display: flex;
+  justify-content: end;
 }
 
-.answerButton {
+.button {
   cursor: pointer;
   display: inline-block;
-  background-color: #fff;
-  font-size: 16px;
-  margin-right: 0.5rem;
-  padding: 0.5rem;
+  background-color: var(--colors-white);
+  font-family: var(--font);
+  font-size: var(--fz-buttons);
+  color: var(--colors-accent);
+  padding: var(--pad-sm-btn);
   border: none;
-  border-radius: 5px;
+  border-radius: var(--radii);
 }
 
-.answerButton:hover {
-  background-color: #ddd;
+.button:hover {
+  color: var(--colors-white);
+  background-color: var(--colors-accent-hov);
 }
 
 @media (max-width: 600px) {
