--- a/frontend/styles/PostPage.module.css
+++ b/frontend/styles/PostPage.module.css
@@ -22,6 +22,10 @@
   margin-bottom: 1rem;
 }
 
+.content {
+  width: 80%;
+}
+
 .contentContainer h2 {
   font-size: var(--fz-md1);
   margin-bottom: 0.5rem;
@@ -81,5 +85,53 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 769px) {
+  .postContainer {
+    padding: 1.5rem;
+  }
+
+  .topContainer {
+    flex-direction: column;
+  }
+
+  .contentContainer {
+    flex-direction: column;
+  }
+
+  .content {
+    width: 100%;
+  }
+
+  .buttonsContainer {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .button {
+    margin-top: 1rem;
+  }
+}
+
+@media (max-width: 481px) {
+  .infoContainer {
+    font-size: 13px;
+  }
+
+  .answersContainer {
+    font-size: 13px;
+
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .content h2 {
+    font-size: 18px;
+  }
+
+  .content p {
+    font-size: 13px;
   }
 }
