--- a/frontend/styles/Comment.module.css
+++ b/frontend/styles/Comment.module.css
@@ -12,11 +12,11 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  margin-bottom: 1rem;
 }
 
 .infoContainer {
   font-size: var(--fz-sm);
-  margin-bottom: 1rem;
   color: var(--colors-grey);
 }
 
@@ -24,6 +24,7 @@
   font-size: var(--fz-sm);
   color: var(--colors-grey);
   display: flex;
+  flex-wrap: nowrap;
   align-items: center;
 }
 
@@ -39,6 +40,10 @@
 
 .contentContainer p {
   font-size: var(--fz-sm);
+}
+
+.content {
+  width: 100%;
 }
 
 .image {
@@ -70,14 +75,49 @@
   background-color: var(--colors-accent-hov);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 769px) {
+  .container {
+    padding: 1.5rem;
+  }
+
+  .topContainer {
+    flex-direction: column;
+  }
+
   .contentContainer {
     flex-direction: column;
   }
-  .image {
-    max-width: 100%;
-    max-height: 100%;
-    margin-right: 0;
-    margin-bottom: 1rem;
+
+  .content {
+    width: 100%;
+  }
+
+  .bottomContainer {
+    flex-direction: column;
+  }
+
+  .button {
+    margin-top: 1rem;
+  }
+}
+
+@media (max-width: 481px) {
+  .infoContainer {
+    font-size: 13px;
+  }
+
+  .answersContainer {
+    font-size: 13px;
+
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .content h2 {
+    font-size: 18px;
+  }
+
+  .content p {
+    font-size: 13px;
   }
 }
